# bevy_eventwork_mod_websockets

./: .gitignore  Cargo.toml  README.md
examples/: client.rs  server.rs  shared.rs
src/: json.rs  lib.rs  serde_json.rs
wasm_client_example/: Cargo.toml  README.MD  index.html
wasm_client_example/src/: main.rs  shared.rs
