[package]
name = "bevy_eventwork_mod_websockets"
version = "0.2.0"
edition = "2021"
resolver = "2"
description = "A Websocket NetworkProvider for Bevy_eventwork"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_eventwork_mod_websockets"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "client"

[[example]]
name = "server"

[workspace]
members = ["wasm_client_example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_eventwork = { version = "0.9", default-features = false }
# This is a bevy plugin
bevy = { version = "0.14.0", features = [], default-features = false }
# Used for on wire serialization
bincode = "1.3.3"
# Used for non-tokio dependent threaded message passing
async-channel = "2.1.0"
# Used for providers, which are async in nature
async-trait = "0.1.74"
# Websocket
url = { version = "2.0.0" }
futures = { version = "0.3.29" }

# Used 1.33.0or Stream type and other ext
futures-lite = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.26.2", features = [
    "async-std-runtime",
    "url",
] }
async-std = { version = "1.12.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-tungstenite-wasm = { version = "0.3.1" }
send_wrapper = "^0.6"

[dev-dependencies]
bevy = { version = "0.14.0", features = ["default_font"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108" }
